# pico-stepper-motor

./: CMakeLists.txt  README.md
src/: main.c  stepper.c  stepper.h
